set break point for a specific screen size

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
   <!-- about -->
   <div class="row">
-    <div class="col">
+    <div class="col-lg">
       <h3 class="mb-4">About Coder Wellbeing Conf</h3>
       <img class="mb-4 img-fluid rounded" src="img/mornington.jpg" alt=""Mornington>
       <p>Well-being, wellbeing, or wellness is a general term for the condition of an individual or group. A high level
@@ -26,7 +26,7 @@
         well-being that extend beyond the traditional definition of health. It includes choices and activities aimed at
         achieving physical vitality, mental alacrity, social satisfaction, a sense of accomplishment, and personal
         fulfillment</p></div>
-    <div class="col">
+    <div class="col-lg">
       <h3 class="mb-4">Expert speakers</h3>
       <p>There are five basic elements of public speaking that are described in Lasswell's model of communication: the
         communicator, message, medium, audience and effect. In short, the speaker should be answering the question "who
@@ -35,7 +35,7 @@
         some combination of those. Public speaking can also take the form of a discourse community, in which the
         audience and speaker use discourse to achieve a common goal.</p>
     </div>
-    <div class="col">
+    <div class="col-lg">
       <h3 class="mb-4">What You can Experience</h3>
       <ul>
         <li><strong>Tai Chi</strong>: alleviate your back and shoulder tension </li>
