--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
   <!-- about -->
   <div class="row">
-    <div class="col-lg">
+    <div class="col-lg order-lg-2">
       <h3 class="mb-4">About Coder Wellbeing Conf</h3>
       <img class="mb-4 img-fluid rounded" src="img/mornington.jpg" alt=""Mornington>
       <p>Well-being, wellbeing, or wellness is a general term for the condition of an individual or group. A high level
@@ -26,7 +26,7 @@
         well-being that extend beyond the traditional definition of health. It includes choices and activities aimed at
         achieving physical vitality, mental alacrity, social satisfaction, a sense of accomplishment, and personal
         fulfillment</p></div>
-    <div class="col-lg">
+    <div class="col-lg order-lg-1">
       <h3 class="mb-4">Expert speakers</h3>
       <p>There are five basic elements of public speaking that are described in Lasswell's model of communication: the
         communicator, message, medium, audience and effect. In short, the speaker should be answering the question "who
@@ -35,7 +35,7 @@
         some combination of those. Public speaking can also take the form of a discourse community, in which the
         audience and speaker use discourse to achieve a common goal.</p>
     </div>
-    <div class="col-lg">
+    <div class="col-lg order-lg-3">
       <h3 class="mb-4">What You can Experience</h3>
       <ul>
         <li><strong>Tai Chi</strong>: alleviate your back and shoulder tension </li>
@@ -56,6 +56,26 @@
   <!-- schedule -->
   <h1 class="display-4">Schedule</h1>
   <!-- /schedule -->
+
+  <!-- signup form-->
+  <hr>
+  <div class="row py-4 text-muted">
+    <div class="col-md col-xl-5">
+      <p><strong>About Mornington Peninsula Python User Group (MP-PUG)</strong></p>
+      <p>MP-PUG brings technology to community to help peole achieve their dreams and change the world.</p>
+    </div>
+    <div class="col-md col-xl-5 ml-auto">
+      <p><strong>Stay up-to-date on Mornington Peninsula Python User Group</strong></p>
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Email">
+        <span class=""input-group-btn">
+          <button class="btn btn-primary" type="button">Sign up</button>
+        </span>
+      </div>
+    </div>
+
+  </div>
+  <!-- /signup form-->
 
 </div><!-- /.container -->
 
