Make the image disappear when the screen is smaller than sm (d-none d-sm-block)

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   <div class="row">
     <div class="col-lg order-lg-2">
       <h3 class="mb-4">About Coder Wellbeing Conf</h3>
-      <img class="mb-4 img-fluid rounded" src="img/mornington.jpg" alt=""Mornington>
+      <img class="mb-4 img-fluid rounded d-none d-sm-block" src="img/mornington.jpg" alt=""Mornington>
       <p>Well-being, wellbeing, or wellness is a general term for the condition of an individual or group. A high level
         of well-being means in some sense the individual or group's condition is positive.</p>
       <p>Wellness refers to diverse and interconnected dimensions of physical, mental, and social
