--- a/about.html
+++ b/about.html
@@ -62,13 +62,13 @@
   <div class="row py-4 text-muted">
     <div class="col-md col-xl-5">
       <p><strong>About Mornington Peninsula Python User Group (MP-PUG)</strong></p>
-      <p>MP-PUG brings technology to community to help peole achieve their dreams and change the world.</p>
+      <p>MP-PUG brings technology to community to help people achieve their dreams and change the world.</p>
     </div>
     <div class="col-md col-xl-5 ml-auto">
       <p><strong>Stay up-to-date on Mornington Peninsula Python User Group</strong></p>
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Email">
-        <span class=""input-group-btn">
+        <span class="input-group-btn">
           <button class="btn btn-primary" type="button">Sign up</button>
         </span>
       </div>
