--- a/about.html
+++ b/about.html
@@ -13,13 +13,36 @@
 </head>
 
 <body>
-<div class="container pt-4">
+<div class="container pt-4 mt-5">
+  <!-- navbar -->
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <div class="container">
+
+      <a class="navbar-brand order-1" href="#" target="_blank">Mornington Peninsula Python meetup</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">About</a>
+          <a class="nav-item nav-link" href="#">Speaker</a>
+          <a class="nav-item nav-link" href="#">Schedule</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <!-- /navbar -->
 
   <!-- about -->
   <div class="row">
     <div class="col-lg order-lg-2">
       <h3 class="mb-4">About Coder Wellbeing Conf</h3>
-      <img class="mb-4 img-fluid rounded d-none d-sm-block" src="img/mornington.jpg" alt=""Mornington>
+      <img class="mb-4 img-fluid rounded d-none d-sm-block" src="img/mornington.jpg" alt="" Mornington>
       <p>Well-being, wellbeing, or wellness is a general term for the condition of an individual or group. A high level
         of well-being means in some sense the individual or group's condition is positive.</p>
       <p>Wellness refers to diverse and interconnected dimensions of physical, mental, and social
@@ -38,7 +61,7 @@
     <div class="col-lg order-lg-3">
       <h3 class="mb-4">What You can Experience</h3>
       <ul>
-        <li><strong>Tai Chi</strong>: alleviate your back and shoulder tension </li>
+        <li><strong>Tai Chi</strong>: alleviate your back and shoulder tension</li>
         <li><strong>Meditation</strong>: sharpen your attention and cultivate a positive outlook</li>
         <li><strong>Wholesome Food</strong>: eat well to help you live well</li>
         <li><strong>Relationship 101</strong>: tips and opportunities to bond with real human beings</li>
@@ -61,11 +84,11 @@
   <hr>
   <div class="row py-4 text-muted">
     <div class="col-md col-xl-5">
-      <p><strong>About Mornington Peninsula Python User Group (MP-PUG)</strong></p>
-      <p>MP-PUG brings technology to community to help people achieve their dreams and change the world.</p>
+      <p><strong>About Mornington Peninsula Python meetup (MPPy)</strong></p>
+      <p>MPPy brings technology to community to help people achieve their dreams and change the world.</p>
     </div>
     <div class="col-md col-xl-5 ml-auto">
-      <p><strong>Stay up-to-date on Mornington Peninsula Python User Group</strong></p>
+      <p><strong>Stay up-to-date on Mornington Peninsula Python meetup</strong></p>
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Email">
         <span class="input-group-btn">
